--- a/2020dev01/index.html
+++ b/2020dev01/index.html
@@ -77,7 +77,7 @@
         <hr>
 
         <a href="https://www.google.com.tw/">
-            <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="google">
+            <img src="src/googlelogo_color_272x92dp.png" alt="google">
         </a>
         <hr>
 
@@ -96,7 +96,7 @@
         </div>
         <hr>
 
-        <a href="http://www.wibibi.com" target="_blank" title="Wibibi 網頁設計教學百科" style="color:green;" >Wibibi 網頁設計教學百科</a>
+        <a href="http://www.wibibi.com" target="_blank" style="color:green;" >Wibibi 網頁設計教學百科</a>
         <hr>
 
         <p><iframe width="560" height="315" src="https://www.youtube.com/embed/oAUmNEUJlJ0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
