--- a/2020dev03/index.html
+++ b/2020dev03/index.html
@@ -1,17 +1,19 @@
-<html><head>
-	<title>Caminar by TEMPLATED</title>
+<!DOCTYPE html>
+<html>
+    <head>
+	<title>不老同樂會</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body class="">
 
 	<!-- Header -->
 		<header id="header">
-
 			<div class="logo">
-<p><span style='font-size:50pt;'>不老同樂會</span>
-	<span style='font-size:16pt;'>by 醫療文創專題小組</span></p></div>
+                <p><span style='font-size:50pt;'>不老同樂會</span>
+	            <span style='font-size:16pt;'>by 醫療文創專題小組</span></p></div>
 		</header>
 
 	<!-- Main -->
