--- a/2020dev04/index.html
+++ b/2020dev04/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html lang="zh"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="zh">
+    <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--<script src="src/head.js"></script>-->    <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/album/">
     <link rel="stylesheet" href="banana_files/bootstrap.min.css">
     <style>
