--- a/2020dev05/index.html
+++ b/2020dev05/index.html
@@ -9,6 +9,7 @@
 		<title>About Tsai Chen Lin</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
