--- a/2020dev02/index.html
+++ b/2020dev02/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>文史考察照片</title>
+    <title>開源x創生</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -47,7 +47,7 @@
 
   <header class="header-bar d-flex d-lg-flex align-items-center" data-aos="fade-down">
     <div class="site-logo">
-      <a href="index.html">文史考察照片</a>
+      <a href="index.html">開源x創生</a>
     </div>
     
     <div class="d-inline-block d-xl-block ml-md-0 ml-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span> <span style="position: relative;top: -4px; text-transform: uppercase;">Menu</span></a></div>
