--- a/2020dev02/index.html
+++ b/2020dev02/index.html
@@ -65,8 +65,8 @@
 
   <div class="swiper-container gallery-top">
 <div class="swiper-wrapper">
-<div class="swiper-slide cover" style="background-image: url('images/img_1.jpg');">
-  <a href="images/img_1.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_1.JPG');">
+  <a href="images/img_1.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -78,8 +78,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_2.jpg');">
-  <a href="images/img_2.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_2.JPG');">
+  <a href="images/img_2.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -89,8 +89,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_3.jpg');">
-  <a href="images/img_3.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_3.JPG');">
+  <a href="images/img_3.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -100,8 +100,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_4.jpg');">
-  <a href="images/img_4.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_4.JPG');">
+  <a href="images/img_4.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -111,8 +111,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_5.jpg');">
-  <a href="images/img_5.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_5.JPG');">
+  <a href="images/img_5.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -122,8 +122,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_6.jpg');">
-  <a href="images/img_6.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_6.JPG');">
+  <a href="images/img_6.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -133,8 +133,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_7.jpg');">
-  <a href="images/img_7.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_7.JPG');">
+  <a href="images/img_7.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -144,8 +144,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_8.jpg');">
-  <a href="images/img_8.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_8.JPG');">
+  <a href="images/img_8.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -155,8 +155,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_9.jpg');">
-  <a href="images/img_9.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_9.JPG');">
+  <a href="images/img_9.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -166,8 +166,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_10.jpg');">
-  <a href="images/img_10.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_10.JPG');">
+  <a href="images/img_10.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -177,8 +177,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_1.jpg');">
-  <a href="images/img_1.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_1.JPG');">
+  <a href="images/img_1.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -190,8 +190,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_2.jpg');">
-  <a href="images/img_2.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_2.JPG');">
+  <a href="images/img_2.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -201,8 +201,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_3.jpg');">
-  <a href="images/img_3.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_3.JPG');">
+  <a href="images/img_3.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -212,8 +212,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_4.jpg');">
-  <a href="images/img_4.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_4.JPG');">
+  <a href="images/img_4.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -223,8 +223,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_5.jpg');">
-  <a href="images/img_5.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_5.JPG');">
+  <a href="images/img_5.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -234,8 +234,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_6.jpg');">
-  <a href="images/img_6.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_6.JPG');">
+  <a href="images/img_6.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -245,8 +245,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_7.jpg');">
-  <a href="images/img_7.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_7.JPG');">
+  <a href="images/img_7.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -256,8 +256,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_8.jpg');">
-  <a href="images/img_8.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_8.JPG');">
+  <a href="images/img_8.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -267,8 +267,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_9.jpg');">
-  <a href="images/img_9.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_9.JPG');">
+  <a href="images/img_9.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -278,8 +278,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_10.jpg');">
-  <a href="images/img_10.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_10.JPG');">
+  <a href="images/img_10.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -296,26 +296,26 @@
 </div>
 <div class="swiper-container gallery-thumbs">
 <div class="swiper-wrapper">
-<div class="swiper-slide cover" style="background-image:url(images/img_1.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_2.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_3.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_4.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_5.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_6.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_7.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_8.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_9.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_10.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_1.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_2.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_3.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_4.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_5.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_6.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_7.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_8.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_9.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_10.jpg)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_1.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_2.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_3.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_4.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_5.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_6.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_7.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_8.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_9.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_10.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_1.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_2.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_3.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_4.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_5.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_6.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_7.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_8.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_9.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_10.JPG)"></div>
 </div>
 </div>
 
