--- a/2020dev02/index.html
+++ b/2020dev02/index.html
@@ -29,6 +29,14 @@
         .img-info,.btn-toggle-expand{
             display: none;
         }
+
+        nav>a{
+             color: white !important; 
+             text-decoration: underline; 
+             font-size:14pt;
+             cursor: pointer;
+             margin-right: 5px;
+        }
     </style>
   </head>
   <body>
@@ -50,7 +58,14 @@
       <a href="index.html">開源x創生</a>
     </div>
     
-    <div class="d-inline-block d-xl-block ml-md-0 ml-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span> <span style="position: relative;top: -4px; text-transform: uppercase;">Menu</span></a></div>
+    <nav style="float: right;">
+        <a href="index.html">Home</a>
+        <a href="photos.html">Photos</a>
+        <a href="content/index.html" target="_blank">About Me</a>
+        <a href="http://wikidata.localogy.intellicvorg.nctu.me/wiki_localogy/index.html" target="_blank">Community</a>
+    </nav>  
+      
+    <!--<div class="d-inline-block d-xl-block ml-md-0 ml-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span> <span style="position: relative;top: -4px; text-transform: uppercase;">Menu</span></a></div>
 
     <div class="main-menu d-none">
       <ul class="js-clone-nav">
@@ -59,7 +74,7 @@
         <li><a href="content/index.html" target="_blank">About Me</a></li>
         <li><a href="http://wikidata.localogy.intellicvorg.nctu.me/wiki_localogy/index.html" target="_blank">Community</a></li>
       </ul>      
-    </div>
+    </div>-->
   </header> 
   
 
