--- a/2020dev02/photos.html
+++ b/2020dev02/photos.html
@@ -78,24 +78,24 @@
       <div class="row align-items-stretch">
         
         <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
-          <a href="images/img_1.JPG" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_1.JPG" alt="Image" class="img-fluid">
+          <a href="images/img_1.jpg" class="d-block photo-item" data-fancybox="gallery">
+            <img src="images/img_1.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
               <span class="icon icon-search"></span>
             </div>
           </a>
         </div>
         <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-          <a href="images/img_2.JPG" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_2.JPG" alt="Image" class="img-fluid">
+          <a href="images/img_2.jpg" class="d-block photo-item" data-fancybox="gallery">
+            <img src="images/img_2.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
               <span class="icon icon-search"></span>
             </div>
           </a>
         </div>
         <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-          <a href="images/img_3.JPG" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_3.JPG" alt="Image" class="img-fluid">
+          <a href="images/img_3.jpg" class="d-block photo-item" data-fancybox="gallery">
+            <img src="images/img_3.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
               <span class="icon icon-search"></span>
             </div>
@@ -103,24 +103,24 @@
         </div>
 
         <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
-          <a href="images/img_4.JPG" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_4.JPG" alt="Image" class="img-fluid">
+          <a href="images/img_4.jpg" class="d-block photo-item" data-fancybox="gallery">
+            <img src="images/img_4.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
               <span class="icon icon-search"></span>
             </div>
           </a>
         </div>
         <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-          <a href="images/img_5.JPG" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_5.JPG" alt="Image" class="img-fluid">
+          <a href="images/img_5.jpg" class="d-block photo-item" data-fancybox="gallery">
+            <img src="images/img_5.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
               <span class="icon icon-search"></span>
             </div>
           </a>
         </div>
         <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-          <a href="images/img_6.JPG" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_6.JPG" alt="Image" class="img-fluid">
+          <a href="images/img_6.jpg" class="d-block photo-item" data-fancybox="gallery">
+            <img src="images/img_6.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
               <span class="icon icon-search"></span>
             </div>
@@ -128,24 +128,24 @@
         </div>
 
         <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
-          <a href="images/img_7.JPG" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_7.JPG" alt="Image" class="img-fluid">
+          <a href="images/img_7.jpg" class="d-block photo-item" data-fancybox="gallery">
+            <img src="images/img_7.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
               <span class="icon icon-search"></span>
             </div>
           </a>
         </div>
         <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-          <a href="images/img_8.JPG" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_8.JPG" alt="Image" class="img-fluid">
+          <a href="images/img_8.jpg" class="d-block photo-item" data-fancybox="gallery">
+            <img src="images/img_8.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
               <span class="icon icon-search"></span>
             </div>
           </a>
         </div>
         <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-          <a href="images/img_9.JPG" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_9.JPG" alt="Image" class="img-fluid">
+          <a href="images/img_9.jpg" class="d-block photo-item" data-fancybox="gallery">
+            <img src="images/img_9.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
               <span class="icon icon-search"></span>
             </div>
@@ -154,32 +154,32 @@
 
 
         <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
-          <a href="images/img_10.JPG" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_10.JPG" alt="Image" class="img-fluid">
+          <a href="images/img_10.jpg" class="d-block photo-item" data-fancybox="gallery">
+            <img src="images/img_10.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
               <span class="icon icon-search"></span>
             </div>
           </a>
         </div>
         <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
-          <a href="images/img_1.JPG" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_1.JPG" alt="Image" class="img-fluid">
+          <a href="images/img_1.jpg" class="d-block photo-item" data-fancybox="gallery">
+            <img src="images/img_1.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
               <span class="icon icon-search"></span>
             </div>
           </a>
         </div>
         <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-          <a href="images/img_2.JPG" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_2.JPG" alt="Image" class="img-fluid">
+          <a href="images/img_2.jpg" class="d-block photo-item" data-fancybox="gallery">
+            <img src="images/img_2.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
               <span class="icon icon-search"></span>
             </div>
           </a>
         </div>
         <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-          <a href="images/img_3.JPG" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_3.JPG" alt="Image" class="img-fluid">
+          <a href="images/img_3.jpg" class="d-block photo-item" data-fancybox="gallery">
+            <img src="images/img_3.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
               <span class="icon icon-search"></span>
             </div>
@@ -187,24 +187,24 @@
         </div>
 
         <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
-          <a href="images/img_4.JPG" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_4.JPG" alt="Image" class="img-fluid">
+          <a href="images/img_4.jpg" class="d-block photo-item" data-fancybox="gallery">
+            <img src="images/img_4.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
               <span class="icon icon-search"></span>
             </div>
           </a>
         </div>
         <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-          <a href="images/img_5.JPG" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_5.JPG" alt="Image" class="img-fluid">
+          <a href="images/img_5.jpg" class="d-block photo-item" data-fancybox="gallery">
+            <img src="images/img_5.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
               <span class="icon icon-search"></span>
             </div>
           </a>
         </div>
         <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-          <a href="images/img_6.JPG" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_6.JPG" alt="Image" class="img-fluid">
+          <a href="images/img_6.jpg" class="d-block photo-item" data-fancybox="gallery">
+            <img src="images/img_6.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
               <span class="icon icon-search"></span>
             </div>
@@ -212,24 +212,24 @@
         </div>
 
         <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
-          <a href="images/img_7.JPG" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_7.JPG" alt="Image" class="img-fluid">
+          <a href="images/img_7.jpg" class="d-block photo-item" data-fancybox="gallery">
+            <img src="images/img_7.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
               <span class="icon icon-search"></span>
             </div>
           </a>
         </div>
         <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-          <a href="images/img_8.JPG" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_8.JPG" alt="Image" class="img-fluid">
+          <a href="images/img_8.jpg" class="d-block photo-item" data-fancybox="gallery">
+            <img src="images/img_8.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
               <span class="icon icon-search"></span>
             </div>
           </a>
         </div>
         <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-          <a href="images/img_9.JPG" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_9.JPG" alt="Image" class="img-fluid">
+          <a href="images/img_9.jpg" class="d-block photo-item" data-fancybox="gallery">
+            <img src="images/img_9.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
               <span class="icon icon-search"></span>
             </div>
@@ -238,8 +238,8 @@
 
 
         <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
-          <a href="images/img_10.JPG" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_10.JPG" alt="Image" class="img-fluid">
+          <a href="images/img_10.jpg" class="d-block photo-item" data-fancybox="gallery">
+            <img src="images/img_10.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
               <span class="icon icon-search"></span>
             </div>
