--- a/2020dev02/index.html
+++ b/2020dev02/index.html
@@ -26,6 +26,9 @@
     <link rel="stylesheet" href="css/style.css">
     
     <style>
+        *{
+            overflow: hidden;
+        }
         .img-info,.btn-toggle-expand{
             display: none;
         }
