--- a/2020dev02/photos.html
+++ b/2020dev02/photos.html
@@ -25,6 +25,9 @@
 
     <link rel="stylesheet" href="css/style.css">
     <style>
+        *{
+            overflow: hidden;
+        }
         nav>a{
              color: white !important; 
              text-decoration: underline; 
