--- a/2020dev02/photos.html
+++ b/2020dev02/photos.html
@@ -161,7 +161,7 @@
             </div>
           </a>
         </div>
-        <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+        <!--<div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
           <a href="images/img_1.JPG" class="d-block photo-item" data-fancybox="gallery">
             <img src="images/img_1.JPG" alt="Image" class="img-fluid">
             <div class="photo-text-more">
@@ -244,7 +244,7 @@
               <span class="icon icon-search"></span>
             </div>
           </a>
-        </div>
+        </div>-->
 
         
 
