--- a/2020dev02/index.html
+++ b/2020dev02/index.html
@@ -191,7 +191,7 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_1.JPG');">
+<!--<div class="swiper-slide cover" style="background-image: url('images/img_1.JPG');">
   <a href="images/img_1.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
@@ -301,7 +301,7 @@
       <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, ipsam, illo dolorum laboriosam voluptatum laudantium.</p>
     </div>
   </div>
-</div>
+</div>-->
 
 </div>
 
