--- a/2020dev02/photos.html
+++ b/2020dev02/photos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>文史考察照片</title>
+    <title>開源x創生</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -50,7 +50,7 @@
 
   <header class="header-bar d-flex d-lg-flex align-items-center inner-page-header" data-aos="fade-down">
     <div class="site-logo">
-      <a href="index.html">文史考察照片</a>
+      <a href="index.html">開源x創生</a>
     </div>
     
     <nav style="float: right;">
