--- a/2020dev02/index.html
+++ b/2020dev02/index.html
@@ -320,7 +320,7 @@
 <div class="swiper-slide cover" style="background-image:url(images/img_8.JPG)"></div>
 <div class="swiper-slide cover" style="background-image:url(images/img_9.JPG)"></div>
 <div class="swiper-slide cover" style="background-image:url(images/img_10.JPG)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_1.JPG)"></div>
+<!--<div class="swiper-slide cover" style="background-image:url(images/img_1.JPG)"></div>
 <div class="swiper-slide cover" style="background-image:url(images/img_2.JPG)"></div>
 <div class="swiper-slide cover" style="background-image:url(images/img_3.JPG)"></div>
 <div class="swiper-slide cover" style="background-image:url(images/img_4.JPG)"></div>
@@ -329,7 +329,7 @@
 <div class="swiper-slide cover" style="background-image:url(images/img_7.JPG)"></div>
 <div class="swiper-slide cover" style="background-image:url(images/img_8.JPG)"></div>
 <div class="swiper-slide cover" style="background-image:url(images/img_9.JPG)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_10.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_10.JPG)"></div>-->
 </div>
 </div>
 
