--- a/2020dev02/index.html
+++ b/2020dev02/index.html
@@ -58,7 +58,7 @@
     </div>
     
     <nav style="float: right;">
-        <a href="index.html">Home</a>
+        <a href="index.html" style="text-decoration: none;">Home</a>
         <a href="photos.html">Photos</a>
         <a href="content/index.html" target="_blank">About Me</a>
         <a href="http://wikidata.localogy.intellicvorg.nctu.me/wiki_localogy/index.html" target="_blank">Community</a>
