--- a/2020dev02/photos.html
+++ b/2020dev02/photos.html
@@ -55,7 +55,7 @@
     
     <nav style="float: right;">
         <a href="index.html">Home</a>
-        <a href="photos.html">Photos</a>
+        <a href="photos.html" style="text-decoration: none;">Photos</a>
         <a href="content/index.html" target="_blank">About Me</a>
         <a href="http://wikidata.localogy.intellicvorg.nctu.me/wiki_localogy/index.html" target="_blank">Community</a>
     </nav>  
