--- a/2020dev04/index.html
+++ b/2020dev04/index.html
@@ -52,7 +52,7 @@
             <strong>banana</strong>
         </a>
         <div class="nav_link">
-            <a href="https://judyroyya.github.io/practice/bananaworld.html">封面</a>
+            <a href="bananaworld.html">封面</a>
             <!--<a href="https://judyroyya.github.io/practice/bananaworld.html">首頁</a>-->
         </div>      
         </div>
@@ -89,7 +89,7 @@
                   <button onclick="he();" type="button" class="btn btn-sm btn-outline-secondary">more...</button>
                   <script>
                   function he(){
-                      location.href ='https://judyroyya.github.io/practice/banana1998.html'; 原視窗
+                      location.href ='banana1998.html'; 原視窗
                     }
                     </script>
                 </div>
@@ -108,7 +108,7 @@
                   <button onclick="benbenben();" type="button" class="btn btn-sm btn-outline-secondary">more...</button>
                   <script>
                   function benbenben(){
-                      location.href ='https://judyroyya.github.io/practice/banana3D.html'; 原視窗
+                      location.href ='banana3D.html'; 原視窗
                     }
                     </script>
                 </div>
@@ -127,7 +127,7 @@
                   <button onclick="jk();" type="button" class="btn btn-sm btn-outline-secondary">more...</button>
                   <script>
                   function jk(){
-                      location.href ='https://judyroyya.github.io/practice/bananatravel.html'; 原視窗
+                      location.href ='bananatravel.html'; 原視窗
                     }
                    </script>
                 </div>
