--- a/2020dev04/banana1998.html
+++ b/2020dev04/banana1998.html
@@ -26,14 +26,14 @@
           <script>
           function hehe(){
               alert('確定回到封面?');
-              location.href ='https://judyroyya.github.io/practice/bananaworld.html'; //開新視窗
+              location.href ='bananaworld.html'; //開新視窗
               }
            </script>
         <button style="color:aquamarine;background-color:indigo;"onclick="haha();">前往首頁</button>
         <script>
         function haha(){
             //window.open('https://www.facebook.com/'); //開新視窗
-            location.href ='https://judyroyya.github.io/practice/banana.html'; 原視窗
+            location.href ='index.html'; //原視窗
         }
         </script>
       </nav>
