--- a/2020dev07/index.html
+++ b/2020dev07/index.html
@@ -35,6 +35,9 @@ Released   : 20130720
             text-decoration: underline;
             cursor: pointer;
         }
+        #page{
+            border-radius: 10px;
+        }
     </style>
 </head>
 <body>
