--- a/2020dev04/bananaworld.html
+++ b/2020dev04/bananaworld.html
@@ -159,8 +159,8 @@ body {
   <main role="main" class="inner cover">
     <h1  style="color:crimson; font-family: DFKai-sb" class="cover-heading">我是八納納</h1>
     <p class="lead">八納納是什麼? 是香蕉，一種水果，營養價值高的好吃水果</p>
-    <p class="lead">
-        <img src="PCT/googlelogo_color_272x92dp.png" width="350" height="350" alt="google" />
+    <!--<p class="lead">
+        <img src="PCT/googlelogo_color_272x92dp.png" width="350" height="350" alt="google" />-->
     <p class="lead">
         <a class="btn btn-lg btn-secondary" onclick="hehe();" style="color:deeppink;">進入網站</a>
       <script>
