--- a/2020dev08/index.html
+++ b/2020dev08/index.html
@@ -11,21 +11,15 @@
     <title>
         ZHANG，YU-LING RESUME
     </title>
-    <link rel="icon" type="image/png" href="https://hackmd.io/favicon.png">
-    <link rel="apple-touch-icon" href="https://hackmd.io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="asset/favicon.png">
+    <link rel="apple-touch-icon" href="asset/apple-touch-icon.png">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"
-        integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-        integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css" integrity="sha256-3iu9jgsy9TpTwXKb7bNQzqWekRX7pPK+2OLj3R922fo="
-        crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/3.5.0/octicons.min.css" integrity="sha256-QiWfLIsCT02Sdwkogf6YMiQlj4NE84MKkzEMkZnMGdg="
-        crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/themes/prism.min.css" integrity="sha256-vtR0hSWRc3Tb26iuN2oZHt3KRUomwTufNIf5/4oeCyg="
-        crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@hackmd/emojify.js@2.1.0/dist/css/basic/emojify.min.css"
-        integrity="sha256-UOrvMOsSDSrW6szVLe8ZDZezBxh5IoIfgTwdNDgTjiU=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="src/bootstrap.min.css">
+    <link rel="stylesheet" href="src/font-awesome.min.css">
+    <link rel="stylesheet" href="src/ionicons.min.css">
+    <link rel="stylesheet" href="src/octicons.min.css">
+    <link rel="stylesheet" href="src/prism.min.css">
+    <link rel="stylesheet" href="src/emojify.min.css">
     <link rel="stylesheet" href="src/style.css">
     <style>
         .markdown-body hr {
@@ -62,7 +56,7 @@
         <h1 id="ZHANG，YU-LING-RESUME"><a class="anchor hidden-xs" href="#ZHANG，YU-LING-RESUME" title="ZHANG，YU-LING-RESUME"><span
                     class="octicon octicon-link"></span></a>ZHANG，YU-LING RESUME</h1>
         <div class="alert alert-warning">
-            <p><img src="http://user-images.strikinglycdn.com/res/hrscywv4p/image/upload/c_limit,fl_lossy,h_9000,w_1200,f_auto,q_auto/2519003/809767_779764.jpeg"
+            <p><img src="img/809767_779764.webp"
                     alt=""></p>
 
             <hr>
@@ -137,28 +131,28 @@
             </table>
             <hr>
             <p><b style="font-size:20pt;">My Ability</b><br>
-                <img src="https://i.imgur.com/RlKlBwt.png" style="background-color: transparent;width:200px; margin-top:20px;"></p>
+                <img src="img/RlKlBwt.png" style="background-color: transparent;width:200px; margin-top:20px;"></p>
             <hr>
             <h2 id="Software-"><a class="anchor hidden-xs" href="#Software-" title="Software-"><span class="octicon octicon-link"></span></a><b
                     style="font-size:20pt;">Software</b><br>
-                <img src="https://i.imgur.com/ij1xdsP.png" style="background-color: transparent;width:200px;margin-top:10px;"></h2>
+                <img src="img/ij1xdsP.png" style="background-color: transparent;width:200px;margin-top:10px;"></h2>
             <p><b style="font-size: 20pt;">Portfolio</b></p>
             <div style="text-align:center; margin-top:20px;">
-                <img src="http://user-images.strikinglycdn.com/res/hrscywv4p/image/upload/c_limit,fl_lossy,h_1000,w_250,f_auto,q_auto/2519003/308312_357290.jpeg"
+                <img src="img/308312_357290.webp"
                     style="width:200px; margin-bottom:20px;">
-                <img src="http://user-images.strikinglycdn.com/res/hrscywv4p/image/upload/c_limit,fl_lossy,h_1000,w_250,f_auto,q_auto/2519003/741476_477714.jpeg"
+                <img src="img/741476_477714.webp"
                     style="width:200px; margin-left:20px; margin-bottom:20px">
             </div>
             <div style="text-align:center; margin-top:20px;">
-                <img src="http://user-images.strikinglycdn.com/res/hrscywv4p/image/upload/c_limit,fl_lossy,h_1000,w_250,f_auto,q_auto/2519003/361152_176343.jpeg"
+                <img src="img/361152_176343.webp"
                     style="width:200px; margin-bottom:20px;">
-                <img src="http://user-images.strikinglycdn.com/res/hrscywv4p/image/upload/c_limit,fl_lossy,h_1000,w_250,f_auto,q_auto/2519003/69365_565476.png"
+                <img src="img/69365_565476.webp"
                     style="width:200px; margin-left:20px; margin-bottom:20px">
             </div>
             <div style="text-align:center; margin-top:20px;">
-                <img src="http://user-images.strikinglycdn.com/res/hrscywv4p/image/upload/c_limit,fl_lossy,h_1000,w_250,f_auto,q_auto/2519003/674240_320785.jpeg"
+                <img src="img/674240_320785.webp"
                     style="width:200px; margin-bottom:20px;">
-                <img src="http://user-images.strikinglycdn.com/res/hrscywv4p/image/upload/c_limit,fl_lossy,h_1000,w_250,f_auto,q_auto/2519003/308976_308977.jpeg"
+                <img src="img/308976_308977.webp"
                     style="width:200px; margin-left:20px; margin-bottom:20px">
             </div>
             <p><img src="" style="width:200px; margin-bottom:20px;"><img src="" style="width:200px;"><br>
@@ -208,12 +202,9 @@
     </div>
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha256-U5ZEeKfGNOja007MMD3YBI0A3OSZOQbeG6z2f2Y0hu8="
-        crossorigin="anonymous" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gist-embed/2.6.0/gist-embed.min.js" integrity="sha256-KyF2D6xPIJUW5sUDSs93vWyZm+1RzIpKCexxElmxl8g="
-        crossorigin="anonymous" defer></script>
+    <script src="src/jquery.min.js"></script>
+    <script src="src/bootstrap.min.js" defer></script>
+    <script src="src/gist-embed.min.js" defer></script>
     <script>
         var markdown = $(".markdown-body");
         //smooth all hash trigger scrolling
