--- a/2020dev09/index.html
+++ b/2020dev09/index.html
@@ -15,7 +15,7 @@
       <hr>
       <p>喜歡藝術，所以投入藝術,讓自己嘗試各種形式的藝術<br><br>認真做好每一件事</p>
       <div class="btns">
-        <a class="btn btnBehance" href="design.html" target="_blank">平面作品</a>
+        <!--<a class="btn btnBehance" href="design.html" target="_blank">平面作品</a>-->
         <a class="btn btnDribbble"href="video.html" target="_blank">影片</a>
       </div>
       <h4>Skills</h4>
@@ -75,17 +75,17 @@
       <h4>Experience</h4>
       <h2>學歷</h2>
       <ul class="listExperience">
+          <li class="year">2020
+          <ul>
+            <li>國立勤益科技大學 文化創意事業系 在學</li>
+          </ul>
+        </li>
         <li class="year">2019
           <ul>
             <li>國立草屯商工 應用外語科 畢業</li>
-            <li>國立勤益科技大學 文化創意事業系 在學</li>
           </ul>
         </li>
-        <li class="year">2020
-          </ul>
-            <li>國立勤益科技大學 文化創意事業系 在學</li>
-          </ul>
-        </li>
+        </ul>
         <h4>Music Works</h4>
         <h2>音樂作品</h2>
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
