--- a/2020dev09/index.html
+++ b/2020dev09/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compitable" content="ie=edge">
     <title>履歷練習</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="animation.css">
 </head>
 <body>
 <div class="resume">
