--- a/musicplayer/index.html
+++ b/musicplayer/index.html
@@ -136,6 +136,16 @@
             <div class="row"></div>
         </div>   
     </div>
+    
+    <!--Info-->
+    <section>        
+        <div class="album-tracks">
+        <ol>
+        <li> <span>Silence</span><span>0:52</span></li>
+        <li> <span>探索</span><span>0:38</span></li>             
+        </ol>
+        </div>
+    </section>
 </div>
       
 
