--- a/musicplayer/index.html
+++ b/musicplayer/index.html
@@ -139,6 +139,7 @@
     
     <!--Info-->
     <section>        
+        <h3 style="text-align: center; font-size: 20pt;">曲目</h3>
         <div class="album-tracks">
         <ol>
         <li> <span>Silence</span><span>0:52</span></li>
