--- a/test1/index.html
+++ b/test1/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html>
 <!--
 Design by TEMPLATED
 http://templated.co
@@ -15,7 +15,7 @@ Released   : 20130720
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>StylePrecision by TEMPLATED</title>
+<title>人生好難</title>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700|Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css' />
 <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
@@ -27,7 +27,7 @@ Released   : 20130720
 	<div id="page" class="container">
 		<div id="header" class="container">
 			<div id="logo">
-				<h1><a href="#">StylePrecision </a></h1>
+				<h1><a href="#">認識纏花之美 </a></h1>
 			</div>
 			<div id="menu">
 				<ul>
@@ -60,34 +60,34 @@ Released   : 20130720
 		</div>
 		<div id="content">
 			<div class="title">
-				<h2>Welcome to our website</h2>
-				<span class="byline">Phasellus nec erat sit amet nibh pellentesque congue</span> </div>
-			<p>This is <strong>StylePrecision</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
+				<h2>傳統婚禮不可少的一點紅</h2>
+				<span class="byline">過去傳統社會的禮俗與意涵</span> </div>
+			<p><i>「花簪有使用造花者，亦有使用生花者。造花係用紅綢或繡線織製，稱春仔花、繡線花、綢春花等。」</i>（臺北市誌）
+				「 <strong>纏花</strong>」，又名「<strong>春仔花</strong>」是過去台灣傳統漢人社會中，於婚嫁場合不可缺少的重要存在。但也在台灣進入工業化時代之時逐漸沒落、被廉價便利的塑膠花取代……。而纏花過去作為女紅的一種，多數家庭的纏花技法並不外傳，更是導致了纏花曾差點成為僅在歷史中可窺見的一頁。
+				<br>
+				幸虧全台第一位「纏花工藝」技藝保存人——<a href="http://bankofculture.com/archives/2555">陳惠美女士的努力</a>，成功將纏花再次帶回我們的生活之中。
+			</p>
 			<div id="two-column">
 				<div id="tbox1">
 					<div class="title">
-						<h2>Fusce fringilla</h2>
+						<h2>福佬春仔花</h2>
 					</div>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem.</p>
+					<p>主要用於婚嫁場合。</p>
 					<ul class="style2">
-						<li><a href="#">Semper mod quis eget mi dolore</a></li>
-						<li><a href="#">Quam turpis feugiat sit dolor</a></li>
-						<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-						<li><a href="#">Consequat etiam lorem phasellus</a></li>
-						<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
+						<li>基本色調為傳統大紅色與桃紅色</li>
+						<li>過年時有所謂「飯春花」之用途</li>
+						<li>部分宮廟亦有用於祭祀之「爐花」</li>						
 					</ul>
 					<a href="#" class="icon icon-file-alt button">Read More</a> </div>
 				<div id="tbox2">
 					<div class="title">
-						<h2>Maecenas luctus</h2>
+						<h2>客家纏花</h2>
 					</div>
-					<p>Etiam non felis. Donec ut ante. In id eros. Sed dictum rutrum massa eu volutpat. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie.</p>
+					<p>除婚嫁場合外，亦用於日常供奉神明之供品。</p>
 					<ul class="style2">
-						<li><a href="#">Semper mod quis eget mi dolore</a></li>
-						<li><a href="#">Quam turpis feugiat sit dolor</a></li>
-						<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-						<li><a href="#">Consequat etiam lorem phasellus</a></li>
-						<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
+						<li>色調較為豐富有變化</li>
+						<li>有裝進玻璃箱中供奉神明之「供花」</li>
+						<li>也有作為一般婦女、幼兒髮飾或帽飾</li>						
 					</ul>
 					<a href="#" class="icon icon-ok button">Read More</a> </div>
 			</div>
@@ -95,30 +95,26 @@ Released   : 20130720
 		<div id="sidebar">
 			<div class="box1">
 				<div class="title">
-					<h2>Mauris vulputate</h2>
+					<h2>傳統纏花</h2>
 				</div>
 				<ul class="style2">
-					<li><a href="#">Semper mod quis eget mi dolore</a></li>
-					<li><a href="#">Quam turpis feugiat sit dolor</a></li>
-					<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-					<li><a href="#">Consequat etiam lorem phasellus</a></li>
-					<li><a href="#">Semper mod quis eget mi dolore</a></li>
-					<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-					<li><a href="#">Semper mod quisturpis nisi</a></li>
+					<li><a href="https://nchdb.boch.gov.tw/assets/overview/traditionalCraft/20100526000005">自清代便已有相關紀錄</a></li>
+					<li>與刺繡同為女紅技藝</li>
+					<li>一度遭塑膠花取代</li>
+					<li>中部多為鹿港樣式</li>
+					<li>北部多為北投樣式</li>					
 				</ul>
 			</div>
 			<div class="box2">
 				<div class="title">
-					<h2>Integer gravida</h2>
+					<h2>現代纏花</h2>
 				</div>
 				<ul class="style2">
-					<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-					<li><a href="#">Ornare in hendrerit in lectus</a></li>
-					<li><a href="#">Semper mod quis eget mi dolore</a></li>
-					<li><a href="#">Quam turpis feugiat sit dolor</a></li>
-					<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-					<li><a href="#">Semper mod quisturpis nisi</a></li>
-					<li><a href="#">Consequat etiam lorem phasellus</a></li>
+					<li>加入現代創新元素</li>
+					<li>不再只是女性only的女紅技藝</li>
+					<li>逐漸透過現代次文化躍進人們的生活中</li>
+					<li>配戴場合不受侷限，日常場合亦可使用</li>
+					<li>客訂委託將成為未來趨勢，人人都能有專屬於自己的纏花飾品</li>					
 				</ul>
 					<a href="#" class="icon icon-file-alt button">Read More</a> </div>
 			</div>
